refactor: using primitives in update and remove shopping item
